--- a/static/styles.css
+++ b/static/styles.css
@@ -25,8 +25,14 @@ h1, h2, h3, h4, h5, h6 {
 
 code, pre {
   font-family: Hack, mono, monospace;
-  font-size: 0.7em;
-  padding: 10px;
+}
+
+div.highlight {
+    padding: 1rem !important;
+}
+
+div.highlight > pre {
+    margin: 0;
 }
 
 * {
@@ -55,14 +61,15 @@ h1 > a {
 }
 
 blockquote {
+    margin: 0.5rem 0rem;
     border: 1px solid black;
     border-left: 5px solid black;
-    padding: 15px 30px;
+    padding: 0.2rem 0.5rem;
     text-align: justify;
 }
 
 blockquote > p {
-    font-size: 1.2em;
+    margin: 0.1rem 0.1rem;
 }
 
 #overlay {
