--- a/static/highlight.css
+++ b/static/highlight.css
@@ -1,71 +1,73 @@
-/*! anotherdark; http://bytefluent.com/devify/ */
-.highlight, .highlight pre, .highlight table { background: #333333 !important; color: #ffffff !important; }
-.highlight .hll { background-color: #ffffcc !important; }
-.highlight .c { color: #ff4500 !important; } /* Comment */
-.highlight .err { color: #ffffff !important; } /* Error */
-.highlight .g { color: #ffffff !important; } /* Generic */
-.highlight .k { color: #f0e68c !important; } /* Keyword */
-.highlight .l { color: #ffffff !important; } /* Literal */
-.highlight .n, .highlight .h { color: #ffffff !important; } /* Name */
-.highlight .o { color: #ffffff !important; } /* Operator */
-.highlight .x { color: #ffffff !important; } /* Other */
-.highlight .p { color: #ffffff !important; } /* Punctuation */
-.highlight .cm { color: #ff4500 !important; } /* Comment.Multiline */
-.highlight .cp { color: #cd5c5c !important; } /* Comment.Preproc */
-.highlight .c1 { color: #ff4500 !important; } /* Comment.Single */
-.highlight .cs { color: #ff4500 !important; } /* Comment.Special */
-.highlight .gd { color: #0000c0 !important; font-weight: bold !important; background-color: #008080 !important; } /* Generic.Deleted */
-.highlight .ge { color: #c000c0 !important; text-decoration: underline !important; } /* Generic.Emph */
-.highlight .gr { color: #c0c0c0 !important; font-weight: bold !important; background-color: #c00000 !important; } /* Generic.Error */
-.highlight .gh { color: #cd5c5c !important; } /* Generic.Heading */
-.highlight .gi { color: #ffffff !important; background-color: #0000c0 } /* Generic.Inserted */
-.highlight .go { color: #add8e6 !important; font-weight: bold !important; background-color: #4d4d4d !important; } /* Generic.Output */
-.highlight .gp { color: #ffffff !important; } /* Generic.Prompt */
-.highlight .gs { color: #ffffff !important; } /* Generic.Strong */
-.highlight .gu { color: #cd5c5c !important; } /* Generic.Subheading */
-.highlight .gt { color: #c0c0c0 !important; font-weight: bold !important; background-color: #c00000 !important; } /* Generic.Traceback */
-.highlight .kc { color: #f0e68c !important; } /* Keyword.Constant */
-.highlight .kd { color: #f0e68c !important; } /* Keyword.Declaration */
-.highlight .kn { color: #f0e68c !important; } /* Keyword.Namespace */
-.highlight .kp { color: #f0e68c !important; } /* Keyword.Pseudo */
-.highlight .kr { color: #f0e68c !important; } /* Keyword.Reserved */
-.highlight .kt { color: #bdb76b !important; } /* Keyword.Type */
-.highlight .ld { color: #ffffff !important; } /* Literal.Date */
-.highlight .m { color: #ffffff !important; } /* Literal.Number */
-.highlight .s { color: #ffffff !important; } /* Literal.String */
-.highlight .na { color: #ffffff !important; } /* Name.Attribute */
-.highlight .nb { color: #ffffff !important; } /* Name.Builtin */
-.highlight .nc { color: #ffffff !important; } /* Name.Class */
-.highlight .no { color: #ffa0a0 !important; } /* Name.Constant */
-.highlight .nd { color: #ffffff !important; } /* Name.Decorator */
-.highlight .ni { color: #ffdead !important; } /* Name.Entity */
-.highlight .ne { color: #ffffff !important; } /* Name.Exception */
-.highlight .nf { color: #ffffff !important; } /* Name.Function */
-.highlight .nl { color: #ffffff !important; } /* Name.Label */
-.highlight .nn { color: #ffffff !important; } /* Name.Namespace */
-.highlight .nx { color: #ffffff !important; } /* Name.Other */
-.highlight .py { color: #ffffff !important; } /* Name.Property */
-.highlight .nt { color: #f0e68c !important; } /* Name.Tag */
-.highlight .nv { color: #98fb98 !important; } /* Name.Variable */
-.highlight .ow { color: #ffffff !important; } /* Operator.Word */
-.highlight .w { color: #ffffff !important; } /* Text.Whitespace */
-.highlight .mf { color: #ffffff !important; } /* Literal.Number.Float */
-.highlight .mh { color: #ffffff !important; } /* Literal.Number.Hex */
-.highlight .mi { color: #ffffff !important; } /* Literal.Number.Integer */
-.highlight .mo { color: #ffffff !important; } /* Literal.Number.Oct */
-.highlight .sb { color: #ffffff !important; } /* Literal.String.Backtick */
-.highlight .sc { color: #ffffff !important; } /* Literal.String.Char */
-.highlight .sd { color: #ffffff !important; } /* Literal.String.Doc */
-.highlight .s2 { color: #ffffff !important; } /* Literal.String.Double */
-.highlight .se { color: #ffffff !important; } /* Literal.String.Escape */
-.highlight .sh { color: #ffffff !important; } /* Literal.String.Heredoc */
-.highlight .si { color: #ffffff !important; } /* Literal.String.Interpol */
-.highlight .sx { color: #ffffff !important; } /* Literal.String.Other */
-.highlight .sr { color: #ffffff !important; } /* Literal.String.Regex */
-.highlight .s1 { color: #ffffff !important; } /* Literal.String.Single */
-.highlight .ss { color: #ffffff !important; } /* Literal.String.Symbol */
-.highlight .bp { color: #ffffff !important; } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #98fb98 !important; } /* Name.Variable.Class */
-.highlight .vg { color: #98fb98 !important; } /* Name.Variable.Global */
-.highlight .vi { color: #98fb98 !important; } /* Name.Variable.Instance */
-.highlight .il { color: #ffffff !important; } /* Literal.Number.Integer.Long */
+pre { line-height: 125%; }
+td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
+span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
+td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
+.hll { background-color: #ffffcc }
+.c { color: #408080; font-style: italic } /* Comment */
+.err { border: 1px solid #FF0000 } /* Error */
+.k { color: #008000; font-weight: bold } /* Keyword */
+.o { color: #666666 } /* Operator */
+.ch { color: #408080; font-style: italic } /* Comment.Hashbang */
+.cm { color: #408080; font-style: italic } /* Comment.Multiline */
+.cp { color: #BC7A00 } /* Comment.Preproc */
+.cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
+.c1 { color: #408080; font-style: italic } /* Comment.Single */
+.cs { color: #408080; font-style: italic } /* Comment.Special */
+.gd { color: #A00000 } /* Generic.Deleted */
+.ge { font-style: italic } /* Generic.Emph */
+.gr { color: #FF0000 } /* Generic.Error */
+.gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.gi { color: #00A000 } /* Generic.Inserted */
+.go { color: #888888 } /* Generic.Output */
+.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.gt { color: #0044DD } /* Generic.Traceback */
+.kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #008000 } /* Keyword.Pseudo */
+.kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #B00040 } /* Keyword.Type */
+.m { color: #666666 } /* Literal.Number */
+.s { color: #BA2121 } /* Literal.String */
+.na { color: #7D9029 } /* Name.Attribute */
+.nb { color: #008000 } /* Name.Builtin */
+.nc { color: #0000FF; font-weight: bold } /* Name.Class */
+.no { color: #880000 } /* Name.Constant */
+.nd { color: #AA22FF } /* Name.Decorator */
+.ni { color: #999999; font-weight: bold } /* Name.Entity */
+.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+.nf { color: #0000FF } /* Name.Function */
+.nl { color: #A0A000 } /* Name.Label */
+.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+.nt { color: #008000; font-weight: bold } /* Name.Tag */
+.nv { color: #19177C } /* Name.Variable */
+.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.w { color: #bbbbbb } /* Text.Whitespace */
+.mb { color: #666666 } /* Literal.Number.Bin */
+.mf { color: #666666 } /* Literal.Number.Float */
+.mh { color: #666666 } /* Literal.Number.Hex */
+.mi { color: #666666 } /* Literal.Number.Integer */
+.mo { color: #666666 } /* Literal.Number.Oct */
+.sa { color: #BA2121 } /* Literal.String.Affix */
+.sb { color: #BA2121 } /* Literal.String.Backtick */
+.sc { color: #BA2121 } /* Literal.String.Char */
+.dl { color: #BA2121 } /* Literal.String.Delimiter */
+.sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+.s2 { color: #BA2121 } /* Literal.String.Double */
+.se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+.sh { color: #BA2121 } /* Literal.String.Heredoc */
+.si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+.sx { color: #008000 } /* Literal.String.Other */
+.sr { color: #BB6688 } /* Literal.String.Regex */
+.s1 { color: #BA2121 } /* Literal.String.Single */
+.ss { color: #19177C } /* Literal.String.Symbol */
+.bp { color: #008000 } /* Name.Builtin.Pseudo */
+.fm { color: #0000FF } /* Name.Function.Magic */
+.vc { color: #19177C } /* Name.Variable.Class */
+.vg { color: #19177C } /* Name.Variable.Global */
+.vi { color: #19177C } /* Name.Variable.Instance */
+.vm { color: #19177C } /* Name.Variable.Magic */
+.il { color: #666666 } /* Literal.Number.Integer.Long */
